Move standard to devDependencies

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "commander": "^2.11.0",
     "dotenv": "^4.0.0",
     "github": "^11.0.0",
-    "semver": "^5.4.1",
+    "semver": "^5.4.1"
+  },
+  "devDependencies": {
     "standard": "^10.0.3"
   }
 }
