--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commander": "^2.11.0",
     "dotenv": "^4.0.0",
     "github": "^11.0.0",
+    "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "semver": "^5.4.1"
   },
