--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "test": "standard"
   },
   "dependencies": {
+    "@octokit/rest": "^17.9.0",
     "chalk": "^4.0.0",
     "commander": "^5.1.0",
     "dotenv": "^8.2.0",
-    "github": "^11.0.0",
     "mkdirp": "^1.0.4",
     "moment": "^2.25.3",
     "semver": "^7.3.2"
